// Vitest Snapshot v1

exports[`CdrIcon > default configuration > renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > single icon component > renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  
  <path
    d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
    role="presentation"
  />
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > when a single icon component has been passed aria-labelledby > renders correctly 1`] = `
<svg
  aria-labelledby="foo"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  
  <path
    d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
    role="presentation"
  />
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > when an aria-label attribute has been passed > renders correctly 1`] = `
<svg
  aria-label="foo"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > when an aria-labelledby attribute has been passed > renders correctly 1`] = `
<svg
  aria-labelledby="foo"
  class="cdr-icon cdr-icon--medium"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > when size props are passed to the component > renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--small cdr-icon--large@lg"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > when size props are passed to the single icon component > renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--small"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  
  <path
    d="M12 16c.273 0 .521-.11.702-.288l5.005-5.005a1 1 0 00-1.414-1.414L12 13.586 7.705 9.29a1 1 0 00-1.412 1.417l4.98 4.98c.182.193.44.313.727.313z"
    role="presentation"
  />
  
  <!--v-if-->
</svg>
`;

exports[`CdrIcon > with the inheritColor prop set to true > renders correctly 1`] = `
<svg
  aria-hidden="true"
  class="cdr-icon cdr-icon--medium cdr-icon--inherit-color"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  
  
  <!--v-if-->
</svg>
`;
